--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ button {
 .game-data1 {
     position: relative;
     left: 4px;
-    top: -2px;
+    top: -3px;
     display: inline-block;
     border: black 3px solid;
     border-radius: 3px;
@@ -84,7 +84,7 @@ button {
     height: 30px;
     border: 1px solid black;
     /* background-color: lightblue; */
-    background-color: rgb(236, 234, 68);
+    background-color: yellow;
     cursor: pointer;
     font-size: 1.2em;
     box-shadow: 0px 0px 7px 1px black;
@@ -111,5 +111,13 @@ button {
 }
 
 .lives-left {
+    color: red;
+}
+
+.hint {
+    margin-top: 20px;
+}
+
+span {
     color: red;
 }
